--- a/home/css/style.css
+++ b/home/css/style.css
@@ -92,3 +92,16 @@ a:hover {
     background-color: lightgreen;
   }
 
+  div {
+    margin: 10px;
+    padding: 10px;
+    border: solid black 1px;
+    display: inline-block;
+  }
+
+  .pinkBG{
+    background-color: lightpink;
+  }
+
+  
+
